--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "maho",
-  "main": "./js/maho.js",
+  "main": "./maho.js",
   "devDependencies": {
     "@types/node": "^20.1.4",
     "typescript": "^5.0.4"
